--- a/SpringSecuritySocial/pom.xml
+++ b/SpringSecuritySocial/pom.xml
@@ -13,6 +13,7 @@
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 		<thymeleaf.version>2.1.4.RELEASE</thymeleaf.version>
+		<tiles.version>3.0.5</tiles.version>		
 		<mybatis.version>1.1.0</mybatis.version>
 		<spring-security.version>3.1.0.RELEASE</spring-security.version>
 		<mysql.version>5.1.37</mysql.version>		
@@ -146,6 +147,18 @@
 			<artifactId>thymeleaf-spring3</artifactId>
 			<version>${thymeleaf.version}</version>
 		</dependency>
+		
+		<!-- Apache Tiles -->
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-servlet</artifactId>
+			<version>${tiles.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-jsp</artifactId>
+			<version>${tiles.version}</version>
+		</dependency>		
 		
 		<!-- Spring Security -->
 		<dependency>
