--- a/SpringSecuritySocial/src/main/webapp/WEB-INF/web.xml
+++ b/SpringSecuritySocial/src/main/webapp/WEB-INF/web.xml
@@ -64,7 +64,7 @@
 	<!-- Custom filter -->
 	<filter>
 		<filter-name>commonFilter</filter-name>
-		<filter-class>com.ewideplus.companyprofile.filter.CommonFilter</filter-class>
+		<filter-class>com.project.companyprofile.filter.CommonFilter</filter-class>
 	</filter>
 	 
 	<filter-mapping>
